--- a/index.html
+++ b/index.html
@@ -7,31 +7,25 @@
 </head>
 <body>
     <ul>
-        <li><a>Contact</a></li>
+        <li><a href="contact.html" >Contact</a></li>
         <li><a>About Us</a>
             <ul>
-                <li><a>Goal</a></li>
-                <li><a>Our Apples</a></li>
-                <li><a>Location</a></li>
+                <li><a href="ab-goal.html">Goal</a></li>
+                <li><a href="ab-ourapps.html">Our Apples</a></li>
+                <li><a href="ab-location.html">Location</a></li>
             </ul>
         </li>
-        <li><a>2</a>
+        <li><a>Products</a>
             <ul>
-                <li><a>2.1</a></li>
-                <li><a>2.2</a></li>
-                <li><a>2.3</a></li>
-                <li><a>2.4</a></li>
+                <li><a href="p-apples.html">Apples</a></li>
+                <li><a href="p-food.html">Food</a></li>
+                <li><a href="p-beverages.html">Beverages</a></li>
+                <li><a href="p-merch.html">Merchendice</a></li>
             </ul>
         </li>
-        <li><a>1</a>
-            <ul>
-                <li><a>1.1</a></li>
-                <li><a>1.2</a></li>
-                <li><a>1.3</a></li>
-                <li><a>1.4</a></li>
-            </ul>
-        </li>
-        <li><a>Home</a></li>
+        <li><a href="index.html">Home</a></li>
     </ul>
+
+     <h1>Home</h1>
 </body>
 </html>
